external-crates/move/crates/move-compiler/tests/move_2024/verification/specs_are_not_errors.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/verification/specs_are_not_errors.move:4:5
  │
4 │     spec foo {}
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', 'struct', or 'enum'

error[E01002]: unexpected token
   ┌─ tests/move_2024/verification/specs_are_not_errors.move:12:1
   │
12 │ spec a::m {
   │ ^^^^ Invalid code unit. Expected 'address' or 'module'. Got 'spec'

